# IO-Microbenchmarks

./: .gitignore  CMakeLists.txt  README.md  benchmark_helper.sh  benchmark_writer_helper.sh  constants.h  constants_hdd.h  constants_ssd.h  funcs.h  mybenchmark  run_and_write_benchmarks.sh  run_benchmarks.sh  test.sh
benchmark/: CMakeLists.txt
benchmark_results/: read_random.txt  read_size.txt  read_size_1.txt  read_stride.txt  read_stride_2.txt  read_stride_3.txt  read_stride_4.txt  write_random.txt  write_size.txt  write_stride.txt  write_stride_1.txt  write_stride_2.txt  write_stride_3.txt  write_stride_4.txt
benchmark_results/hdd/: read_random.txt  read_size.txt  read_size_1.txt  read_stride.txt  read_stride_2.txt  read_stride_3.txt  read_stride_4.txt  write_random.txt  write_size.txt  write_stride.txt  write_stride_1.txt  write_stride_2.txt  write_stride_3.txt  write_stride_4.txt
benchmark_results/ssd/: read_random.txt  read_size.txt  read_size_1.txt  read_stride.txt  read_stride_2.txt  read_stride_3.txt  read_stride_4.txt  write_random.txt  write_size.txt  write_stride.txt  write_stride_1.txt  write_stride_2.txt  write_stride_3.txt  write_stride_4.txt
plot_benchmark/: benchmark.csv  benchmark_2.csv  benchmark_3.csv  benchmark_4.csv  benchmark_5.csv  myplot.py  plot_helper.sh  run_plot.sh  test.sh
read_random/: read_random.cpp
read_size/: read_size.cpp
read_stride/: read_stride.cpp  read_stride_1.cpp  read_stride_2.cpp  read_stride_3.cpp  read_stride_4.cpp
write_random/: write_random.cpp
write_size/: write_size.cpp
write_stride/: write_stride.cpp  write_stride_1.cpp  write_stride_2.cpp  write_stride_3.cpp  write_stride_4.cpp
